--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문자열 조작 \n",
+    "### 문자열 조작 \n",
     "1. 유요한 팰린드롬\n",
     "주어진 문자열이 필린드롬인지 확인하라. 대소문자를 구분하지 않으며, 영문자와 숫자만을 대상으로 한다.\n",
     "\n",
     "_팰린드롬? 앞뒤가 똑같은 단어나 문장. 뒤집어도 같은 말이 되는 것_\n",
     "\n",
-    "### test code\n",
+    "#### test code\n",
     "- A man, a plan, a canal: Panama\n",
     "- race a car\n"
    ]
