--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Week 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 문자열 조작 \n",
     "1. 유요한 팰린드롬\n",
     "주어진 문자열이 필린드롬인지 확인하라. 대소문자를 구분하지 않으며, 영문자와 숫자만을 대상으로 한다.\n",
@@ -12,12 +19,12 @@
     "\n",
     "#### test code\n",
     "- A man, a plan, a canal: Panama\n",
-    "- race a car\n"
+    "- race a car"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +37,7 @@
    ],
    "source": [
     "a = input()\n",
-    "text = ''.join(filter(str.isalnum,a)).lower()\n",
+    "text = ''.join(filter(str.isalnum, a)).lower()\n",
     "reverse_text = ''.join(reversed(text))\n",
     "\n",
     "\n",
@@ -39,6 +46,11 @@
     "else:\n",
     "    print('false')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
