문자열 뒤집기

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -4,22 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Week 1"
+    "# Week 1\n",
+    "---\n",
+    "## 6장, 문자열 조작"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 문자열 조작 \n",
-    "1. 유요한 팰린드롬\n",
+    "### 유요한 팰린드롬\n",
     "주어진 문자열이 필린드롬인지 확인하라. 대소문자를 구분하지 않으며, 영문자와 숫자만을 대상으로 한다.\n",
     "\n",
     "_팰린드롬? 앞뒤가 똑같은 단어나 문장. 뒤집어도 같은 말이 되는 것_\n",
     "\n",
     "#### test code\n",
-    "- A man, a plan, a canal: Panama\n",
-    "- race a car"
+    "- A man, a plan, a canal: Panama  \n",
+    "  => true\n",
+    "- race a car  \n",
+    "  => false"
    ]
   },
   {
@@ -50,7 +53,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 문자열 뒤집기\n",
+    "문자열을 뒤집는 함수를 작성하라. 입력값은 문자 배열이며, 리턴 없이 리스트 내부를 직접 조작하라.\n",
+    "\n",
+    "#### test code\n",
+    "- [\"h\",\"e\",\"l\",\"l\",\"o\"]  \n",
+    "  => [\"o\",\"l\",\"l\",\"e\",\"h\"]\n",
+    "- [\"H\",\"a\",\"n\",\"n\",\"a\",\"h\"]\n",
+    "  => [\"h\",\"a\",\"n\",\"n\",\"a\",\"H\"]"
+   ]
   },
   {
    "cell_type": "code",
