--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -57,8 +57,10 @@
     "### 2. 문자열 뒤집기\n",
     "문자열을 뒤집는 함수를 작성하라. 입력값은 문자 배열이며, 리턴 없이 리스트 내부를 직접 조작하라.\n",
     "\n",
+    "_타입 힌팅(type hinting)? [관련 글1]('https://www.daleseo.com/python-type-annotations/'), [관련 글2]('https://www.daleseo.com/python-typing/')_\n",
+    "\n",
     "#### test code\n",
-    "- [\"h\",\"e\",\"l\",\"l\",\"o\"]  \n",
+    "-[\"h\",\"e\",\"l\",\"l\",\"o\"]   \n",
     "  => [\"o\",\"l\",\"l\",\"e\",\"h\"]\n",
     "- [\"H\",\"a\",\"n\",\"n\",\"a\",\"h\"]  \n",
     "  => [\"h\",\"a\",\"n\",\"n\",\"a\",\"H\"]"
@@ -66,10 +68,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "a = list((input()).split('\",\"'))\n",
+    "\n",
+    "def reverseString(s: List[str]) -> None:\n",
+    "    # print(s)\n",
+    "    # print(type(s))\n",
+    "    return print(s.reverse())\n",
+    "\n",
+    "reverseString(a)\n",
+    "\n",
+    "# 풀이2에 있는 방식으로 했는데 음... 뭐가 문제인지 잘...?\n",
+    "# 일단, 입력을 리스트 형태로 한다는데 []등을 문자열로 인식해서 허허 그대로 리스트에 들어감"
+   ]
   }
  ],
  "metadata": {
