로그 파일 재정렬

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -82,17 +82,61 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "a = list((input()).split('\",\"'))\n",
+    "# a = list((input()).split('\",\"'))\n",
+    "a = [\"h\",\"e\",\"l\",\"l\",\"o\"] \n",
     "\n",
     "def reverseString(s: List[str]) -> None:\n",
     "    # print(s)\n",
     "    # print(type(s))\n",
-    "    return print(s.reverse())\n",
+    "    s.reverse()\n",
     "\n",
-    "reverseString(a)\n",
+    "print(reverseString(a))\n",
     "\n",
-    "# 풀이2에 있는 방식으로 했는데 음... 뭐가 문제인지 잘...?\n",
-    "# 일단, 입력을 리스트 형태로 한다는데 []등을 문자열로 인식해서 허허 그대로 리스트에 들어감"
+    "# 풀이2에 있는 방식으로 했는데 음... 뭐가 문제인지 잘...?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 로그 파일 재정렬\n",
+    "로그를 재정렬하라. 기준은 다음과 같다.\n",
+    "1. 로그의 가장 앞 부분은 식별자다.\n",
+    "2. 문자로 구성된 로그가 숫자 로그보다 앞에 온다.\n",
+    "3. 식별자는 순서에 영향을 끼치지 않지만, 문자가 동일할 경우 식별자 순으로 한다.\n",
+    "4. 숫자 로그는 입력 순서대로 한다.\n",
+    "\n",
+    "##### test code\n",
+    "- logs = [\"dig1 8 1 5 1\", \"let1 art can\", \"dig2 3 6\",\"let2 own kit dig\",\"let3 art zero\"]  \n",
+    "  => [\"let1 art can\",\"let3 art zero\",\"let2 own kit dig\",\"dig2 3 6\",\"dig1 8 1 5 1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['let1 art can', 'let3 art zero', 'let2 own kit dig', 'dig1 8 1 5 1', 'dig2 3 6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "logs = [\"dig1 8 1 5 1\", \"let1 art can\", \"dig2 3 6\",\"let2 own kit dig\",\"let3 art zero\"]\n",
+    "\n",
+    "letters, digits = [],[]\n",
+    "for log in logs:\n",
+    "    if log.split()[1].isdigit():\n",
+    "        digits.append(log)\n",
+    "    else:\n",
+    "        letters.append(log)\n",
+    "\n",
+    "letters.sort(key=lambda x: (x.split()[1:], x.split()[0]))\n",
+    "\n",
+    "print(letters + digits)"
    ]
   }
  ],
