4. 가장 흔한 단어

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -138,6 +138,62 @@
     "\n",
     "print(letters + digits)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 가장 흔한 단어\n",
+    "금지된 단어를 제외한 가장 흔하게 등장하는 단어를 출력하라. 대소문자 구분을 하지 않으며, 구두점(마침표,쉼표 등) 또한 무시한다.\n",
+    "\n",
+    "#### test code\n",
+    "- paragraph = \"Bob hit a ball, the hit BALL flew far after it was hit.\" \n",
+    "  banned = [\"hit\"]  \n",
+    "  => \"ball\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ball\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "from collections import Counter\n",
+    "\n",
+    "paragraph = \"Bob hit a ball, the hit BALL flew far after it was hit.\" \n",
+    "banned = [\"hit\"] \n",
+    "pa = []\n",
+    "\n",
+    "paragraph = paragraph.translate(str.maketrans(' ',' ', string.punctuation)).lower()\n",
+    "\n",
+    "for i in range(len(paragraph.split())):\n",
+    "  if paragraph.split()[i] !='hit':\n",
+    "    pa.append(paragraph.split()[i])\n",
+    "\n",
+    "counter = Counter(pa)\n",
+    "\n",
+    "for i in counter:\n",
+    "  if counter[i] == max(counter.values()):\n",
+    "    print(i)\n",
+    "\n",
+    "# print(filter(str.isalnum, pa))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
