5. 그룹 애너그램

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -183,9 +183,49 @@
     "\n",
     "for i in counter:\n",
     "  if counter[i] == max(counter.values()):\n",
-    "    print(i)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. 그룹 애너그램\n",
+    "문자열 배열을 받아 애너그램 단위로 그룹핑하라.\n",
     "\n",
-    "# print(filter(str.isalnum, pa))"
+    "#### test code\n",
+    "- [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]  \n",
+    "  => [\n",
+    "    [\"ate\",\"eat\",\"tea\"],\n",
+    "    [\"nat\",\"tan\"],\n",
+    "    [\"bat\"]\n",
+    "  ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "test = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"] \n",
+    "arg = collections.defaultdict(list)\n",
+    "\n",
+    "for i in test:\n",
+    "    arg[''.join(sorted(i))].append(i)\n",
+    "\n",
+    "print(list(arg.values()))\n",
+    "\n",
+    "# 책의 도움을 받아 좀 수정함.."
    ]
   },
   {
