6. 가장 긴 팰린드롬 부분 문자열

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -229,6 +229,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. 가장 긴 팰린드롬 부분 문자열\n",
+    "가장 긴 팰린드롬 부분 문자열을 출력하라.\n",
+    "\n",
+    "#### test code\n",
+    "- \"babad\"  \n",
+    "  => \"bab\" or \"aba\"  \n",
+    "- \"cbbd\"  \n",
+    "  => \"bb\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
