--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -147,7 +147,7 @@
     "금지된 단어를 제외한 가장 흔하게 등장하는 단어를 출력하라. 대소문자 구분을 하지 않으며, 구두점(마침표,쉼표 등) 또한 무시한다.\n",
     "\n",
     "#### test code\n",
-    "- paragraph = \"Bob hit a ball, the hit BALL flew far after it was hit.\" \n",
+    "- paragraph = \"Bob hit a ball, the hit BALL flew far after it was hit.\"   \n",
     "  banned = [\"hit\"]  \n",
     "  => \"ball\""
    ]
@@ -244,10 +244,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bb\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"cbbd\"\n",
+    "text = ''.join(filter(str.isalnum, a)).lower()\n",
+    "reverse_text = ''.join(reversed(text))\n",
+    "result = []\n",
+    "\n",
+    "for i in range(len(text)):\n",
+    "    if text[i] == reverse_text[i]:\n",
+    "        result.append(text[i])\n",
+    "\n",
+    "print(''.join(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. 두 수의 합\n",
+    "덧셈하여 타겟을 만들 수 있는 배열의 두 숫자 인덱스를 리턴하라.\n",
+    "\n",
+    "#### test code\n",
+    "- nums = [2, 7, 11, 15], target = 9  \n",
+    "  => [0,1]  \n",
+    "  nums[0] + nums[1] = 2 + 7 = 9  따라서, 0,1을 리턴한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2, 7, 11, 15]\n",
+    "target = 9\n",
+    "result = []\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range(i + 1, len(nums)):\n",
+    "        if nums[i] + nums[j] == target:\n",
+    "            result.extend([i,j])\n",
+    "\n",
+    "# list에 여러개를 한번에 추가하고 싶을 때는, append가 아닌 extend!\n",
+    "\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
