8. 빗물 트래핑

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -308,6 +308,95 @@
     "\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. 빗물 트래핑\n",
+    "높이를 입력받아 비 온 후 얼마나 물이 쌓일 수 있는지 계산하라.\n",
+    "\n",
+    "#### test code\n",
+    "- [0,1,0,2,1,0,1,3,2,1,2,1]  \n",
+    "  => 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum 0\n",
+      "1\n",
+      "j 2\n",
+      "sum 0\n",
+      "sum 0\n",
+      "3\n",
+      "j 4\n",
+      "sum 0\n",
+      "4\n",
+      "j 5\n",
+      "sum 0\n",
+      "sum 0\n",
+      "6\n",
+      "j 7\n",
+      "ij 6 7\n",
+      "sum 0\n",
+      "7\n",
+      "j 8\n",
+      "sum 0\n",
+      "8\n",
+      "j 9\n",
+      "sum 0\n",
+      "9\n",
+      "j 10\n",
+      "ij 9 10\n",
+      "sum 0\n",
+      "10\n",
+      "j 11\n",
+      "sum 0\n",
+      "11\n",
+      "sum 0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "height = [0,1,0,2,1,0,1,3,2,1,2,1] \n",
+    "sum = 0\n",
+    "for i in range(len(height)):\n",
+    "    if i+1 >= len(height):\n",
+    "        break\n",
+    "    else:\n",
+    "        hap = height[i] - height[i+1]\n",
+    "        if hap > 0:\n",
+    "          sum += hap\n",
+    "      \n",
+    "\n",
+    "# for i in range(len(height)):\n",
+    "#     if height[i] != 0:\n",
+    "#       for j in range(i+1,len(height)):\n",
+    "#           if height[i] <= height[j]:\n",
+    "#               mi = 0\n",
+    "#               for k in range(i+1, j):  \n",
+    "#                   mi += height[k]                 \n",
+    "#               sum = (height[i] * (j-i-1)) - mi \n",
+    "#           break\n",
+    "print(sum)\n",
+    "\n",
+    "# 미완성..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
