8. 빗물 트래핑

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -323,45 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum 0\n",
-      "1\n",
-      "j 2\n",
-      "sum 0\n",
-      "sum 0\n",
-      "3\n",
-      "j 4\n",
-      "sum 0\n",
-      "4\n",
-      "j 5\n",
-      "sum 0\n",
-      "sum 0\n",
-      "6\n",
-      "j 7\n",
-      "ij 6 7\n",
-      "sum 0\n",
-      "7\n",
-      "j 8\n",
-      "sum 0\n",
-      "8\n",
-      "j 9\n",
-      "sum 0\n",
-      "9\n",
-      "j 10\n",
-      "ij 9 10\n",
-      "sum 0\n",
-      "10\n",
-      "j 11\n",
-      "sum 0\n",
-      "11\n",
-      "sum 0\n",
-      "0\n"
+      "6\n"
      ]
     }
    ],
@@ -386,6 +355,7 @@
     "#                   mi += height[k]                 \n",
     "#               sum = (height[i] * (j-i-1)) - mi \n",
     "#           break\n",
+    "# 생각하기로는 emurate를 사용해서 위치와 값을 튜플형식으로 빼서 해야 수월할 것 같다.\n",
     "print(sum)\n",
     "\n",
     "# 미완성..."
