--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -362,6 +362,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. 세 수의 합\n",
+    "배열을 입력받아 합으로 0을 만들 수 있는 3개의 엘리먼트를 출력하라.\n",
+    "\n",
+    "### test code\n",
+    "- nums = [-1, 0, 1, 2, -1, -4]  \n",
+    "  => [\n",
+    "    [-1, 0, 1],\n",
+    "    [-1, -1, 2]\n",
+    "  ]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
