--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -378,6 +378,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1, -1, 2], [-1, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [-1, 0, 1, 2, -1, -4] \n",
+    "results = []\n",
+    "nums.sort()\n",
+    "\n",
+    "for i in range(len(nums)-2):\n",
+    "    # 중복 값 건너뛰기\n",
+    "    if i > 0 and nums[i] == nums[i-1]:\n",
+    "        continue\n",
+    "    \n",
+    "    # 간격 좁히며 sum 계산\n",
+    "    left, right = i + 1, len(nums) - 1\n",
+    "    while left < right:\n",
+    "        sum = nums[i] + nums[left] + nums[right]\n",
+    "        if sum < 0:\n",
+    "            left += 1\n",
+    "        elif sum > 0:\n",
+    "            right -= 1\n",
+    "        else:\n",
+    "            # sum = 0인 경우, 정답 밎 스킵\n",
+    "            results.append([nums[i], nums[left], nums[right]])\n",
+    "\n",
+    "            while left < right and nums[left] == nums[left + 1]:\n",
+    "                left += 1\n",
+    "            while left < right and nums[right] == nums[right - 1]:\n",
+    "                right -= 1\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. 배열 파티션1\n",
+    "n개의 페어를 이용한 min(a,b)의 합으로 만들 수 있는 가장 큰 수를 출력하라.\n",
+    "\n",
+    "#### test code\n",
+    "- [1,4,3,2]  \n",
+    "  => 4  \n",
+    "  n은 2가 되며, 최대 합은 4이다.  \n",
+    "  min(1,2) + min(3,4) = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[62], line 11\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# for i in range(len(nums)):\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m#     if i % 2 == 0:\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m#         sum += nums[i]\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39;49m(\u001b[39msorted\u001b[39;49m(nums)[::\u001b[39m2\u001b[39;49m]))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,4,3,2]\n",
+    "nums.sort()\n",
+    "sum = 0\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    if i % 2 == 0:\n",
+    "        sum += nums[i]\n",
+    "\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
