--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -437,25 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[62], line 11\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# for i in range(len(nums)):\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m#     if i % 2 == 0:\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m#         sum += nums[i]\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39msum\u001b[39;49m(\u001b[39msorted\u001b[39;49m(nums)[::\u001b[39m2\u001b[39;49m]))\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+      "4\n"
      ]
     }
    ],
@@ -469,6 +458,48 @@
     "        sum += nums[i]\n",
     "\n",
     "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. 자신을 제외한 배열의 곱\n",
+    "배열을 입력받아 output[i]가 자신을 제외한 나머지 모든 요소의 곱셈 결과가 되도록 출력하라.\n",
+    "\n",
+    "#### test code\n",
+    "- [1,2,3,4]  \n",
+    "  => [24,12,8,6]  \n",
+    "  주의, 나눗셈을 하지 않고 O(n)에 풀이할 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 12, 8, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4]\n",
+    "result = []\n",
+    "\n",
+    "for i in range(len(nums)):\n",
+    "    mul = 1\n",
+    "    for n in nums[i+1::]:\n",
+    "        mul *= n\n",
+    "    for k in nums[0:i]:\n",
+    "        mul *= k\n",
+    "    result.append(mul)\n",
+    "\n",
+    "print(result)\n",
+    "## 시간 제한 걸림..\n"
    ]
   },
   {
