--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -503,6 +503,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12. 주식을 살고팔기 가장 좋은 시점\n",
+    "한 번의 거래로 낼 수 있는 최대 이익을 산출하라\n",
+    "\n",
+    "#### test code \n",
+    "- [7,1,5,3,6,4]  \n",
+    "  => 5  \n",
+    "  1일 때 사서, 6일때 팔면 5의 이익을 얻는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "nums = [7,1,5,3,6,4] \n",
+    "profit = 0\n",
+    "min_price = sys.maxsize\n",
+    "\n",
+    "for i in nums:\n",
+    "    min_price = min(min_price, i)\n",
+    "    profit = max(profit, i - min_price)\n",
+    "\n",
+    "print(profit)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
