--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -272,6 +272,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 7장 배열\n",
+    "---\n",
+    "\n",
     "### 7. 두 수의 합\n",
     "덧셈하여 타겟을 만들 수 있는 배열의 두 숫자 인덱스를 리턴하라.\n",
     "\n",
@@ -506,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 12. 주식을 살고팔기 가장 좋은 시점\n",
+    "### 12. 주식을 사고팔기 가장 좋은 시점\n",
     "한 번의 거래로 낼 수 있는 최대 이익을 산출하라\n",
     "\n",
     "#### test code \n",
@@ -540,6 +543,59 @@
     "    profit = max(profit, i - min_price)\n",
     "\n",
     "print(profit)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8장 연결리스트\n",
+    "---\n",
+    "\n",
+    "### 13. 팰린드롬 연결 리스트\n",
+    "연결 리스트가 팰린드롬 구조인지 판별하라.\n",
+    "\n",
+    "#### test code \n",
+    "- 1->2  \n",
+    "  => false\n",
+    "- 1->2->2->1  \n",
+    "  -> true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ListNode(object):\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def isPalindrome(self, head: ListNode) -> bool:\n",
+    "  rev = None\n",
+    "  slow = fast = head\n",
+    "\n",
+    "\n",
+    "  while fast and fast.next:\n",
+    "      fast = fast.next.next\n",
+    "      rev, rev.next, slow = slow, rev, slow.nex\n",
+    "  if fast:\n",
+    "      slow = slow.next\n",
+    "\n",
+    "  while rev and rev.val == slow.val:\n",
+    "      slow, rev = slow.next, rev.next\n",
+    "      \n",
+    "  return not rev"
    ]
   },
   {
