--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -599,11 +599,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. 두 정렬 리스트의 병합\n",
+    "정렬되어 있는 두 연결 리스트를 합쳐라.\n",
+    "\n",
+    "#### test code \n",
+    "- 1->2->4, 1->3->4  \n",
+    "  => 1->1->2->3->4->4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ListNode(object):\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def mergeTwoLists(self, l1:ListNode, l2:ListNode) -> ListNode:\n",
+    "    if (not l1) or (l2 and l1.val > l2.val):\n",
+    "        l1, l2 = l2, l1\n",
+    "    if l1:\n",
+    "        l1.next = self.mergeTwoLists(l1.next, l2)\n",
+    "    return l1"
+   ]
   }
  ],
  "metadata": {
