15. 역순 연결 리스트

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -628,6 +628,47 @@
     "        l1.next = self.mergeTwoLists(l1.next, l2)\n",
     "    return l1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 15. 역순 연결 리스트\n",
+    "연결 리스트를 뒤집어라\n",
+    "\n",
+    "#### test code\n",
+    "- 1->2->3->4->5->NULL  \n",
+    "  => 5->4->3->2->NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode(object):\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def reverseList1(self, head:ListNode) -> ListNode:\n",
+    "    def reverse(node: ListNode, prev: ListNode = None):\n",
+    "        if not node:\n",
+    "            return prev\n",
+    "        next, node.next = node.next, prev\n",
+    "        return reverse(next, node)\n",
+    "    return reverse(head)\n",
+    "\n",
+    "def reverseList2(self, head:ListNode) -> ListNode:\n",
+    "    node, prev = head, None\n",
+    "    \n",
+    "    while node:\n",
+    "        next, node.next = node.next, prev\n",
+    "        prev, node = node, next\n",
+    "\n",
+    "    return prev"
+   ]
   }
  ],
  "metadata": {
