16. 두수의 덧셈

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -669,6 +669,46 @@
     "\n",
     "    return prev"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16. 두 수의 덧셈\n",
+    "역순으로 저장된 연결 리스트의 숫자를 더하라.\n",
+    "\n",
+    "#### test code\n",
+    "- (2 -> 4 -> 3) + (5 -> 6 -> 4)  \n",
+    "  => 7 -> 0 -> 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:\n",
+    "  root = head = ListNode(0)\n",
+    "\n",
+    "  carry = 0\n",
+    "  while l1 or l2 or carry:\n",
+    "    sum = 0\n",
+    "    # 두 입력값의 합 계산\n",
+    "    if l1:\n",
+    "      sum += l1.val\n",
+    "      l1 = l1.next\n",
+    "    if l2:\n",
+    "      sum += l2.val\n",
+    "      l2 = l2.next\n",
+    "\n",
+    "    # 몫과 나머지 계산\n",
+    "    carry, val = divmod(sum + carry, 10)\n",
+    "    head.next = ListNode(val)\n",
+    "    head = head.next\n",
+    "\n",
+    "  return root.next"
+   ]
   }
  ],
  "metadata": {
