페어의 노드 스왑

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -709,6 +709,35 @@
     "\n",
     "  return root.next"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. 페어의 노드 스왑\n",
+    "연결 리스트를 입력받아 페어 단위로 스왑하라.\n",
+    "\n",
+    "#### test code\n",
+    "- 1->2->3->4  \n",
+    "  => 2->1->4->3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "    if head and head.next:\n",
+    "        p = head.next\n",
+    "\n",
+    "        #스왑된 값 리턴 받음\n",
+    "        head.next = self.swapPairs(p.next)\n",
+    "        p.next = head\n",
+    "        return p \n",
+    "    return head"
+   ]
   }
  ],
  "metadata": {
