--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -738,6 +738,46 @@
     "        return p \n",
     "    return head"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 18. 홀짝 연결 리스트\n",
+    "연결 리스트를 홀수 번째 노드 다음에 짝수 번째 노드가 오도록 재구성하라. 공간 복잡도 O(1), 시간 복잡도 O(n)에 풀이하라.\n",
+    "\n",
+    "#### test code \n",
+    "- 1->2->3->4->5->NULL  \n",
+    "  => 1->3->5->2->4->NULL\n",
+    "\n",
+    "- 2->1->3->5->6->4->7->NULL  \n",
+    "  => 2->3->6->7->1->5->4->NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def oddEvenList(self, head: ListNode) -> ListNode:\n",
+    "    # 예외처리\n",
+    "    if head is None:\n",
+    "        return None\n",
+    "    \n",
+    "    odd = head\n",
+    "    even = head.next\n",
+    "    even_head = head.next\n",
+    "\n",
+    "    # 반복하면서 홀짝 노드 처리\n",
+    "    while even and even.next:\n",
+    "        odd.next, even.next = odd.next.next, even.next.next\n",
+    "        odd, even = odd.next, even.next\n",
+    "\n",
+    "    # 홀짝 노드의 마지막 짝수 헤드로 연결\n",
+    "    odd.next = even_head\n",
+    "    return head"
+   ]
   }
  ],
  "metadata": {
