19. 역순 연결 리스트2

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -778,6 +778,42 @@
     "    odd.next = even_head\n",
     "    return head"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19. 역순 연결 리스트2\n",
+    "인덱스 m에서 n까지 역순으로 만들어라. 인덱스 m은 1부터 시작한다.\n",
+    "\n",
+    "#### test code\n",
+    "- 1->2->3->4->5->NULL, m = 2, n = 4  \n",
+    "  => 1->4->3->2->5->NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseBetween(self, head: ListNode, m: int, n: int) -> ListNode:\n",
+    "    # 예외처리\n",
+    "    if not head or m == n:\n",
+    "        return head\n",
+    "    \n",
+    "    root = start = ListNode(None)\n",
+    "    root.next = head\n",
+    "    for _ in range(m-1):\n",
+    "        start = start.next\n",
+    "    end = start.next\n",
+    "\n",
+    "    # 반복하면서 노드 차례대로 뒤집기\n",
+    "    for _ in range(n - m):\n",
+    "        tmp, start.next, end.next = start.next, end.next, end.next.next\n",
+    "        start.next.next = tmp\n",
+    "    return root.next"
+   ]
   }
  ],
  "metadata": {
