유효한 괄호

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -814,6 +814,44 @@
     "        start.next.next = tmp\n",
     "    return root.next"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9장 스택, 큐\n",
+    "---\n",
+    "\n",
+    "### 20. 유효한 괄호\n",
+    "괄호로 된 입력값이 올바른지 판별하라\n",
+    "\n",
+    "#### test code\n",
+    "- ()[]{}  \n",
+    "  => true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isValid(self, s: str) -> bool:\n",
+    "    stack = []\n",
+    "    table = {\n",
+    "        ')': '(',\n",
+    "        '}': '{',\n",
+    "        ']': '[',\n",
+    "    }\n",
+    "\n",
+    "    # 스택 이용 예외 처리 및 일치 여부 판별\n",
+    "    for char in s:\n",
+    "        if char not in table:\n",
+    "            stack.append(char)\n",
+    "        elif not stack or table[char] != stack.pop():\n",
+    "            return False\n",
+    "    return len(stack) == 0"
+   ]
   }
  ],
  "metadata": {
