21. 중복 문자 제거

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -852,6 +852,36 @@
     "            return False\n",
     "    return len(stack) == 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 21. 중복 문자 제거\n",
+    "중복된 문자를 제외하고 사전식 순서로 나열하라.\n",
+    "\n",
+    "#### test code\n",
+    "- \"bcabc\"  \n",
+    "  => \"abc\"\n",
+    "\n",
+    "- \"cbacdcbc\"  \n",
+    "  => \"acdb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeDuplicateLetters(self, s: str) -> str:\n",
+    "    for char in sorted(set(s)):\n",
+    "      suffix = s[s.index(char):]\n",
+    "      # 전체 집합과 접미사 집합이 일치할 때 분리 진행\n",
+    "      if set(s) == set(suffix):\n",
+    "        return char + self.removeDuplicateLetters(suffix.replace(char, ''))\n",
+    "    return ''"
+   ]
   }
  ],
  "metadata": {
