--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -882,6 +882,36 @@
     "        return char + self.removeDuplicateLetters(suffix.replace(char, ''))\n",
     "    return ''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 22. 일일 온도\n",
+    "매일의 화씨 온도 리스트 T를 입력받아서, 더 따뜻한 날씨를 위해서는 며칠을 더 기다려야 하는지를 출력하라.\n",
+    "\n",
+    "#### test code\n",
+    "- T = [73, 74, 75, 71, 69, 72, 76, 73]  \n",
+    "  => [1,1,4,2,1,1,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dailyTemperatures(self, T: List[int]) -> List[int]:\n",
+    "    answer = [0] * len(T)\n",
+    "    stack = []\n",
+    "    for i, cur in enumerate(T):\n",
+    "        # 현재 온도가 스택 값보다 높다면 정답 처리\n",
+    "        while stack and cur > T[stack[-1]]:\n",
+    "            last = stack.pop()\n",
+    "            answer[last] = i - last\n",
+    "        stack.append(i)\n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
