23. 큐를 이용한 스택 구현

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -912,6 +912,40 @@
     "        stack.append(i)\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23. 큐를 이용한 스택 구현\n",
+    "큐를 이용해 다음 연산 지원하는 스택을 구현하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyStack:\n",
+    "    def __init__(self):\n",
+    "        self.q = collections.deque()\n",
+    "    \n",
+    "    def push(self, x):\n",
+    "        self.q.append(x)\n",
+    "        # 요소 삽입 후 맨 앞에 두는 상태로 재정렬\n",
+    "        for _ in range(len(self.q) - 1):\n",
+    "            self.q.append(self.q.popleft())\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.q.popleft()\n",
+    "    \n",
+    "    def top(self):\n",
+    "        return self.q[0]\n",
+    "    \n",
+    "    def empty(self):\n",
+    "        return len(self.q) == 0"
+   ]
   }
  ],
  "metadata": {
