24. 스택을 이용한 큐 구현

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -946,6 +946,42 @@
     "    def empty(self):\n",
     "        return len(self.q) == 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 24. 스택을 이용한 큐 구현\n",
+    "스택을 이용해 다음 연산을 지원하는 큐를 구현하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue:\n",
+    "    def __init__(self):\n",
+    "        self.input = []\n",
+    "        self.output = []\n",
+    "    \n",
+    "    def push(self, x):\n",
+    "        self.input.append(x)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        self.peek()\n",
+    "        return self.output.pop()\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        if not self.output:\n",
+    "            while self.input:\n",
+    "                self.output.append(self.input.pop())\n",
+    "        return self.output[-1]\n",
+    "    \n",
+    "    def empty(self):\n",
+    "        return self.input == [] and self.output == []"
+   ]
   }
  ],
  "metadata": {
