25. 원형 큐 디자인

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -982,6 +982,64 @@
     "    def empty(self):\n",
     "        return self.input == [] and self.output == []"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 25. 원형 큐 디자인\n",
+    "원형 큐를 디자인하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyCircularQueue:\n",
+    "    def __init__(self, k: int):\n",
+    "        self.front = 0\n",
+    "        self.rear = 0\n",
+    "        self.q = [None] * k  # None으로 해야됨\n",
+    "        self.len = k\n",
+    "\n",
+    "    def enQueue(self, value: int) -> bool:\n",
+    "        # 값을 넣고 rear 포인터가 한 칸 이동함\n",
+    "        if self.q[self.rear] is None:\n",
+    "            self.q[self.rear] = value\n",
+    "            self.rear = (self.rear + 1) % self.len\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def deQueue(self) -> bool:\n",
+    "        if self.q[self.front] is None:\n",
+    "            return False\n",
+    "        else:\n",
+    "            self.q[self.front] = None\n",
+    "            self.front = (self.front + 1) % self.len\n",
+    "            return True\n",
+    "\n",
+    "    def Front(self) -> int:\n",
+    "        if self.q[self.front] is None:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return self.q[self.front]\n",
+    "\n",
+    "    def Rear(self) -> int:\n",
+    "        if self.q[self.rear] is None:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            # 값을 넣고 포인터가 이동하므로, 실제로 출력할 때는 `self.rear - 1`\n",
+    "            return self.q[self.rear - 1]\n",
+    "\n",
+    "    def isEmpty(self) -> bool:\n",
+    "        return self.front == self.rear and self.q[self.front] is None\n",
+    "\n",
+    "    def isFull(self) -> bool:\n",
+    "        return self.front == self.rear and self.q[self.front] is not None"
+   ]
   }
  ],
  "metadata": {
