26. 원형 데크 디자인

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1040,6 +1040,95 @@
     "    def isFull(self) -> bool:\n",
     "        return self.front == self.rear and self.q[self.front] is not None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10장 데크, 우선순위 큐\n",
+    "---\n",
+    "\n",
+    "### 26. 원형 데크 디자인 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyCircularDeque:\n",
+    "    def __init__(self, k: int):\n",
+    "        self.head, self.tail = ListNode(None), ListNode(None)\n",
+    "        self.max_len, self.len = k, 0\n",
+    "        self.head.right, self.tail.left = self.tail, self.head\n",
+    "\n",
+    "    # _add : node의 오른쪽에 new를 삽입한다\n",
+    "    def _add(self, node: ListNode, new: ListNode):\n",
+    "        n = node.right\n",
+    "        node.right = new\n",
+    "        new.left, new.right = node, n\n",
+    "        n.left = new\n",
+    "\n",
+    "    # _del : node의 오른쪽 노드를 삭제한다.\n",
+    "    def _del(self, node: ListNode):\n",
+    "        n = node.right.right\n",
+    "        node.right = n\n",
+    "        n.left = node\n",
+    "\n",
+    "    def insertFront(self, value: int) -> bool:\n",
+    "        if self.len == self.max_len:\n",
+    "            return False\n",
+    "        self.len += 1\n",
+    "        # self.head의 \"오른쪽\"에 신규 노드 삽입\n",
+    "        self._add(self.head, ListNode(value))\n",
+    "        return True\n",
+    "\n",
+    "    def insertLast(self, value: int) -> bool:\n",
+    "        if self.len == self.max_len:\n",
+    "            return False\n",
+    "        self.len += 1\n",
+    "        # self.tail.left의 \"오른쪽\"에 신규 노드 삽입\n",
+    "        self._add(self.tail.left, ListNode(value))\n",
+    "        return True\n",
+    "\n",
+    "    def deleteFront(self) -> bool:\n",
+    "        if self.len == 0:\n",
+    "            return False\n",
+    "        self.len -= 1\n",
+    "        # self.head의 \"오른쪽\" 노드를 삭제\n",
+    "        self._del(self.head)\n",
+    "        return True\n",
+    "\n",
+    "    def deleteLast(self) -> bool:\n",
+    "        if self.len == 0:\n",
+    "            return False\n",
+    "        self.len -= 1\n",
+    "        # self.tail.left.left의 \"오른쪽\" 노드를 삭제\n",
+    "        self._del(self.tail.left.left)\n",
+    "        return True\n",
+    "\n",
+    "    def getFront(self) -> int:\n",
+    "        return self.head.right.val if self.len else -1\n",
+    "\n",
+    "    def getRear(self) -> int:\n",
+    "        return self.tail.left.val if self.len else -1\n",
+    "\n",
+    "    def isEmpty(self) -> bool:\n",
+    "        return self.len == 0\n",
+    "\n",
+    "    def isFull(self) -> bool:\n",
+    "        return self.len == self.max_len\n",
+    "        \n",
+    "    # ------------ 디버깅용 ----ㅋ --------\n",
+    "    def printDeque(self):\n",
+    "        node = ListNode(0)\n",
+    "        node.right = self.head.right\n",
+    "        for _ in range(self.len):\n",
+    "            print(node.right.val, end=\"->\")\n",
+    "            node = node.right\n",
+    "        print()"
+   ]
   }
  ],
  "metadata": {
