27. k개 정렬 리스트 병합

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1120,7 +1120,6 @@
     "    def isFull(self) -> bool:\n",
     "        return self.len == self.max_len\n",
     "        \n",
-    "    # ------------ 디버깅용 ----ㅋ --------\n",
     "    def printDeque(self):\n",
     "        node = ListNode(0)\n",
     "        node.right = self.head.right\n",
@@ -1128,6 +1127,58 @@
     "            print(node.right.val, end=\"->\")\n",
     "            node = node.right\n",
     "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 27. k개 정렬 리스트 병합\n",
+    "k개의 정렬된 리스트 1개의 정렬된 리스트로 병합하라.\n",
+    "\n",
+    "#### test code\n",
+    "- [\n",
+    "  1->4->5,\n",
+    "  1->3->4,\n",
+    "  2->6\n",
+    "]  \n",
+    "  => 1->1->2->3->4->4->5->6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeKLists(self, lists: List[ListNode]) -> ListNode:\n",
+    "    root = result = ListNode(None)\n",
+    "    heap =[]\n",
+    "\n",
+    "    # 각 연결 리스트의 루트를 힙에 저장\n",
+    "    for i in range(len(lists)):\n",
+    "        if lists[i]:\n",
+    "            heapq.heappush(heap, (lists[i].val, i, lists[i]))\n",
+    "\n",
+    "    while heap:\n",
+    "        node = heapq.heappop(heap)\n",
+    "        idx = node[1]\n",
+    "        result.next = node[2]\n",
+    "\n",
+    "        result = result.next\n",
+    "        if result.next:\n",
+    "            heapq.heappush(heap, (result.next.val, idx, result.next))\n",
+    "\n",
+    "    return root.next\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11장, 해시 테이블\n",
+    "---\n",
+    "\n"
    ]
   }
  ],
