28. 해시맵 디자인

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1178,7 +1178,98 @@
    "source": [
     "## 11장, 해시 테이블\n",
     "---\n",
-    "\n"
+    "\n",
+    "### 28. 해시맵 디자인\n",
+    "다음의 기능을 제공하는 해시맵을 디자인하라. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, key=None, val=None, next=None):\n",
+    "        self.key = key\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "\n",
+    "# 개별 체이닝 방식 + dict로 풀기\n",
+    "class MyHashMap:\n",
+    "    def __init__(self):\n",
+    "        self.hash_map = defaultdict(ListNode)\n",
+    "\n",
+    "    def hash_function(self, key): # hash_address를 리턴함\n",
+    "        return key % 1000\n",
+    "\n",
+    "    def put(self, key: int, value: int) -> None:\n",
+    "        hash_address = self.hash_function(key)\n",
+    "\n",
+    "        # 만약 hash_address에 처음 추가하는 값이라면\n",
+    "        if self.hash_map[hash_address] is None:\n",
+    "            self.hash_map[hash_address] = ListNode(key, value)\n",
+    "            return\n",
+    "\n",
+    "        # 이미 hash_address에 값이 존재하는 경우\n",
+    "        node = self.hash_map[hash_address]\n",
+    "        while node:\n",
+    "            # 이미 같은 키가 존재하면 값만 바꾸기\n",
+    "            if node.key == key:\n",
+    "                node.val = value\n",
+    "                return\n",
+    "            # 모든 키를 조사했지만 같은 키가 존재하지 않는다면\n",
+    "            if not node.next:\n",
+    "                break\n",
+    "            node = node.next\n",
+    "\n",
+    "        node.next = ListNode(key, value)\n",
+    "        print(\"     >> 충돌!:\", node.next.val)\n",
+    "\n",
+    "    def get(self, key: int) -> int:\n",
+    "        hash_address = self.hash_function(key)\n",
+    "\n",
+    "        # 해당 hash_address가 비어있다면\n",
+    "        if not self.hash_map[hash_address]:\n",
+    "            return -1\n",
+    "\n",
+    "        # 해당 hash_address에 값이 1개 이상 있다면\n",
+    "        node = self.hash_map[hash_address]\n",
+    "        while node:\n",
+    "            if node.key == key:\n",
+    "                return node.val\n",
+    "            node = node.next\n",
+    "\n",
+    "        # 다 찾았는데 여전히 키가 같은 것이 존재하지 않는다면\n",
+    "        return -1\n",
+    "\n",
+    "    def remove(self, key: int) -> None:\n",
+    "        hash_address = self.hash_function(key)\n",
+    "\n",
+    "        # 삭제할 것이 존재하지 않는다면\n",
+    "        if self.hash_map[hash_address] is None:\n",
+    "            return\n",
+    "\n",
+    "        prev = node = self.hash_map[hash_address]\n",
+    "\n",
+    "        # 만약 삭제할 노드가 첫번째 노드일때\n",
+    "        if node.key == key:\n",
+    "            if node.next:  # 뒤에 노드들이 더 존재하면\n",
+    "                self.hash_map[hash_address] = node.next\n",
+    "            node = None\n",
+    "            return\n",
+    "\n",
+    "        # 첫번째 노드가 아니라면 차례대로 검사\n",
+    "        while node:\n",
+    "            if node.key == key:\n",
+    "                prev.next = node.next\n",
+    "                return\n",
+    "            prev = node\n",
+    "            node = node.next"
    ]
   }
  ],
