--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1271,6 +1271,27 @@
     "            prev = node\n",
     "            node = node.next"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 29. 보석과 돌\n",
+    "J는 보석이며, S갖고 있는 돌이다. S에는 보석이 몇 개나 있을까? 대소문자는 구분한다.\n",
+    "\n",
+    "- J = \"aA\", S = \"aAAbbbb\"  \n",
+    "  => 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numJewelsInStones(self, J: str, S: str) -> int:\n",
+    "    return sum(s in J for s in S)"
+   ]
   }
  ],
  "metadata": {
