30. 중복 문자 없는 가장 긴 부분 문자열

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1292,6 +1292,45 @@
     "def numJewelsInStones(self, J: str, S: str) -> int:\n",
     "    return sum(s in J for s in S)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 30. 중복 문자 없는 가장 긴 부분 문자열\n",
+    "중복 문자가 없는 가장 긴 부분 문자열의 길이를 리턴하라.\n",
+    "\n",
+    "#### test code\n",
+    "\n",
+    "- \"abcabcbb\"  \n",
+    "=> 3\n",
+    "\n",
+    "- \"bbbbb\"  \n",
+    "  => 1\n",
+    "\n",
+    "- \"pwwkew\"  \n",
+    "  => 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lengthIfLongestSubstring(self, s:str) -> int:\n",
+    "    used = {}\n",
+    "    max_length = start = 0\n",
+    "    for index, char in enumerate(s):\n",
+    "        if char in used and start <= used[char]:\n",
+    "            start = used[char] + 1\n",
+    "        else:\n",
+    "            max_length = max(max_length, index - start + 1)\n",
+    "        \n",
+    "        used[char] = index\n",
+    "\n",
+    "    return max_length\n"
+   ]
   }
  ],
  "metadata": {
