31. 상위 k 빈도 요소

--- a/CiTy-Study_2023/week1.ipynb
+++ b/CiTy-Study_2023/week1.ipynb
@@ -1331,6 +1331,27 @@
     "\n",
     "    return max_length\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 31. 상위 K 빈도 요소\n",
+    "상위 k번 이상 등장하는 요소를 추출하라.\n",
+    "\n",
+    "- nums = [1,1,1,2,2,3], k=2  \n",
+    "  => [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def topFrequent(self, nums, k):\n",
+    "    return list(zip(*collections.Counter(nums).most_common(k)))[0]"
+   ]
   }
  ],
  "metadata": {
