프로그래머스 기초 및 입문 day7-8 and day1

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -18,6 +18,177 @@
     "def solution(age):\n",
     "  return \"\".join(chr(int(i) + 97) for i in str(age))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 특정문자 제거하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(my_string, letter):\n",
+    "    answer = ''\n",
+    "    for i in my_string:\n",
+    "        if i != letter:\n",
+    "            answer += i\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 각도기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(angle):\n",
+    "    if angle == 180:\n",
+    "        return 4\n",
+    "    elif angle > 90:\n",
+    "        return 3\n",
+    "    elif angle == 90:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 양꼬치"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, k):\n",
+    "    k -= n // 10\n",
+    "    return (n * 12000) + (k * 2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 짝수의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    answer = 0\n",
+    "    for i in range(2,n+1,2):\n",
+    "        answer += i\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 자르기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers, num1, num2):\n",
+    "    return numbers[num1:num2+1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a와b 출력하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = map(int, input().strip().split(' '))\n",
+    "print(f'a = {a}\\nb = {b}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 대소문자 바꿔서 출력하기\n",
+    "\n",
+    "swapcase() : 대문자는 소문자로, 소문자는 대문자로 변환해주는 함수  \n",
+    "해당 함수를 사용하면 한 줄로 코딩 가능...\n",
+    "```python\n",
+    "print(input().swapcase())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = input()\n",
+    "result = ''\n",
+    "\n",
+    "for i in str:\n",
+    "    if i.isupper():\n",
+    "        result += i.lower()\n",
+    "    else:\n",
+    "        result += i.upper()\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 특수문자 출력하기\n",
+    "\n",
+    "특수문자를 출력하고 싶다면 사용했던 따옴표와 동일한 특수문자 앞에 \\(역슬래쉬) 사용 및 \\(역슬래쉬)는 출력하려면 \\(역슬래쉬)를 한번 더 붙여주기  \n",
+    "이 방법 말고, 문자열 앞에 r을 붙여주고 따옴표는 홀따옴표를 사용(쌍따옴표 사용X)  \n",
+    "```python\n",
+    "print(r'!@#$%^&*(\\'\"<>?:;')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"!@#$%^&*(\\\\'\\\"<>?:;\")"
+   ]
   }
  ],
  "metadata": {
