진료 순서 정하기

--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -189,6 +189,53 @@
    "source": [
     "print(\"!@#$%^&*(\\\\'\\\"<>?:;\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 진료 순서 정하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1]\n",
+      "0\n",
+      "0\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 2]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(emergency):\n",
+    "    result = [1]*len(emergency)\n",
+    "    for i in range(len(emergency)):\n",
+    "        for j in emergency:\n",
+    "            if emergency[i] < j :\n",
+    "                result[i] += 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    return result\n",
+    "\n",
+    "solution([3, 76, 24])"
+   ]
   }
  ],
  "metadata": {
