--- a/CiTy-Study_2023/week4.ipynb
+++ b/CiTy-Study_2023/week4.ipynb
@@ -236,6 +236,142 @@
     "\n",
     "solution([3, 76, 24])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 순서쌍의 종류"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    result = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 개미군단"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(hp):\n",
+    "    return (hp // 5) + ((hp % 5) // 3) + ((hp % 5) % 3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 모스부호\n",
+    "\n",
+    "join을 사용해서 문자를 바로 붙여도 괜찮을 듯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(letter):\n",
+    "    morse = { \n",
+    "    '.-':'a','-...':'b','-.-.':'c','-..':'d','.':'e','..-.':'f',\n",
+    "    '--.':'g','....':'h','..':'i','.---':'j','-.-':'k','.-..':'l',\n",
+    "    '--':'m','-.':'n','---':'o','.--.':'p','--.-':'q','.-.':'r',\n",
+    "    '...':'s','-':'t','..-':'u','...-':'v','.--':'w','-..-':'x',\n",
+    "    '-.--':'y','--..':'z'\n",
+    "    }\n",
+    "    result = ''\n",
+    "    for i in letter.split():\n",
+    "        result += morse[i]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 가위바위보\n",
+    "\n",
+    "변환 값들을 딕셔너리로 저장하거나 replace를 통해서 변환하는 것도 좋은 듯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(rsp):\n",
+    "    answer = ''\n",
+    "    for i in rsp:\n",
+    "        if i == '2':\n",
+    "            answer += '0'\n",
+    "        elif i == '0':\n",
+    "            answer += '5'\n",
+    "        else:\n",
+    "            answer += '2'\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 구슬을 나누는 경우의 수\n",
+    "\n",
+    "for문 대신에 factorial 함수를 사용하자. (있다는 걸 이제 알았다...)  \n",
+    "\n",
+    "```python\n",
+    "import math\n",
+    "def solution(balls, share):\n",
+    "    return math.factorial(balls)/(math.factorial(balls-share)*math.factorial(share))\n",
+    "```\n",
+    "\n",
+    "조합 함수를 사용하면 매우 쉽다..  \n",
+    "\n",
+    "```pyhton\n",
+    "import math\n",
+    "def solution(balls, share):\n",
+    "    return math.comb(balls, share)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(balls, share):\n",
+    "    a = 1\n",
+    "    b = 1\n",
+    "    c =1\n",
+    "    for i in range(1, balls+1):\n",
+    "        a *= i\n",
+    "    for i in range(1, balls-share + 1):\n",
+    "        b *= i\n",
+    "    for i in range(1, share + 1):\n",
+    "        c *= i\n",
+    "    return a / (b * c )"
+   ]
   }
  ],
  "metadata": {
